--- a/final/SamplePluginPA10/CMakeLists.txt
+++ b/final/SamplePluginPA10/CMakeLists.txt
@@ -58,7 +58,7 @@ QT4_WRAP_CPP(MocSrcFiles src/SamplePlugin.hpp)
 QT4_ADD_RESOURCES(RccSrcFiles src/resources.qrc)
 
 # Add the source files to build (besides the Qt generated source files)
-SET(SrcFiles src/SamplePlugin.cpp src/testMarker.cpp src/testIK.cpp)
+SET(SrcFiles src/SamplePlugin.cpp src/testMarker.cpp src/testIK.cpp src/vision.cpp)
 
 # The shared library to build:
 ADD_LIBRARY(SamplePlugin MODULE ${SrcFiles} ${UIS_OUT_H} ${MocSrcFiles} ${RccSrcFiles})
